ajustei algumas coisas do currículo

--- a/index.html
+++ b/index.html
@@ -3,18 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Currículo</title>
-    <style>
-        .header {
-            position: relative;
-        }
-
-        h1, h2 {
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-    </style>
 </head>
 <body>
     <div class="header">
@@ -22,6 +10,8 @@
         <h2>Do xandinho</h2>
     </div>
     <p>agora temos um parágrafo</p>
-    <img src="fotinha.jpeg" alt="">
+    <a href="https://www.linkedin.com/in/alexandre-perusio-1a92031b5/">linkedin</a>
+    <a href="https://github.com/AlendaL">GitHub</a>
+    <img src="C:\Users\Aluno\Pictures\Screenshots\fotinha.jpeg.jpg" alt="">
 </body>
 </html>
